syntax = "proto3";
package certusone.wormholechain.tokenbridge;

option go_package = "github.com/certusone/wormhole-chain/x/tokenbridge/types";

message EventChainRegistered{
  uint32 chainID = 1;
  bytes emitterAddress = 2;
}

message EventAssetRegistrationUpdate{
  uint32 tokenChain = 1;
  bytes tokenAddress = 2;
  string name = 3;
  string symbol = 4;
  uint32 decimals = 5;
}

message EventTransferReceived{
  uint32 tokenChain = 1;
  bytes tokenAddress = 2;
  string to = 3;
  string feeRecipient = 4;
  string amount = 5;
  string fee = 6;
  string localDenom = 7;
}
